--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,94 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>'
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculator</title>'
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    Hello World
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+  <div class="container">
+    <h1 class="text-center fw-bold mt-3">Scientific Calculator</h1>
+    <div class="row border">
+      <div class="col-12 offset-md-3 col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <input id="calc-display" readonly class="form-control form-control-lg text-end" type="text"
+              aria-label=".form-control-lg example">
+          </div>
+          <div class="row gx-1 mx-3 mb-3">
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">(</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">)</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">%</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">AC</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">7</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">8</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">9</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">÷</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">4</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">5</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">6</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">×</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">1</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">2</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">3</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">-</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">0</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">.</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-primary w-100 border border-primary">=</button>
+            </div>
+            <div class="col-3">
+              <button type="button" class="btn btn-light w-100 border">+</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
