--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container shadow pb-5 costom-bg-color">
     <h1 class="text-center fw-bold mt-3">Scientific Calculator</h1>
-    <div class="row border">
+    <div class="row">
       <div class="col-12 offset-md-3 col-md-6">
         <div class="card">
           <div class="card-body">
